--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Style This HTML Lab</title>
+  <title>Main Page</title>
   <link href='http://fonts.googleapis.com/css?family=Devonshire' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
@@ -12,8 +12,9 @@
 <body>
   <div id="page-wrapper">
     <header id="header">
-      <a id="logo1" href="index.html"><img src="images/logo3.png" alt="Acme logo, large and in red"></a>
+      <a id="logo1" href="index.html"><img src="images/logo3.png" alt="Acme logo in red with grey outline"></a>
       <h1>My Demo Site</h1>
+      <a id="toplink" href="https://www.fileformat.info/info/unicode/char/2699/index.htm">&#9881;</a>
     </header>
     <nav id="main-nav">
       <ul>
@@ -27,7 +28,7 @@
     <main id="content-wrapper">
       <div id="main-content">
         <h2><strong>This is our h2 Tag</strong></h2>
-        <img class="image-r" src="images/main.png" alt="Logo for Main Squeeze Juice Company in black and white">
+        <img class="imageR" src="images/main.png" alt="Main Squeeze Juice Company logo in black and white">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, perferendis, sed ab sequi molestias eum sint consectetur dicta praesentium ipsa repellat soluta placeat dolor! Accusantium impedit est explicabo harum aperiam!</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, perferendis, sed ab sequi molestias eum sint consectetur dicta praesentium ipsa repellat soluta placeat dolor! Accusantium impedit est explicabo harum aperiam!</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, perferendis, sed ab sequi molestias eum sint consectetur dicta praesentium ipsa repellat soluta placeat dolor! Accusantium impedit est explicabo harum aperiam!</p>
